fix something strange

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@
 # The connection string to connect to the mongo bd
 TULIP_MONGO="mongo:27017"
 # The location of your pcaps as seen by the host
-TRAFFIC_DIR_HOST="./services/traffico"
+TRAFFIC_DIR_HOST="./services/test_pcap"
 # The location of your pcaps (and eve.json), as seen by the container
 TRAFFIC_DIR_DOCKER="/traffic"
 
@@ -41,5 +41,5 @@ FLAG_REGEX="[A-Z0-9]{31}="
 # # Flagid endpoint currently Testendpoint in docker compose
 # FLAGID_ENDPOINT="http://flagidendpoint:8000/flagids.json"
 # # VM IP (inside gamenet)
-VM_IP="127.0.0.1"
+# VM_IP="10.10.3.1"
 # TEAM_ID="10.10.3.1"
